--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  color: white;
   height: 100vh;
   overflow: hidden;
   background: black;
@@ -13,7 +12,11 @@ body {
 input{
   color: white;
 }
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+#root{
+  position: absolute;
+  
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
